--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HK-Word-Counter</title>
-    <link rel="stylesheet" href="WordCounter.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="word-counter-container">
@@ -15,6 +15,6 @@
       <div class="word-count">No. of words: <span>0</span></div>
     </div>
 
-    <script src="WordCounter.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
