--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/x-icon" href="icons8-favicon-50.png">
     <meta name="google-site-verification" content="34rOXF8qpPsiTNQEkIRtayC071Nw9E6cQB4qMWspFms" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
