--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>Word Counter</h2>
       <textarea name="" id="" cols="30" rows="10" class="words"></textarea>
       <button class="count-btn">Count Words</button>
-      <div class="word-count">No. of words: <span>0</span></div>
+      <div class="word-count">Number of words: <span>0</span></div>
     </div>
 
     <script src="index.js"></script>
