--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MJMDS67EKN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MJMDS67EKN');
+</script>
     <link rel="icon" type="image/x-icon" href="icons8-favicon-50.png">
     <meta name="google-site-verification" content="34rOXF8qpPsiTNQEkIRtayC071Nw9E6cQB4qMWspFms" />
     <meta charset="UTF-8" />
