--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   gtag('config', 'G-MJMDS67EKN');
 </script>
-     <link rel="icon" type="image/png" href="favicon2.png">
+     <link rel="icon" type="image/png" href="Store Favicon.png">
     <meta name="google-site-verification" content="34rOXF8qpPsiTNQEkIRtayC071Nw9E6cQB4qMWspFms" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
